2017-06-16  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/hook_funcs.c: Fix the calling convention of setsockopt
	    on Windows x86.

2017-06-11  Kubo Takehiro <kubo@jiubao.org>
	* NEWS: Add changes between 2.2.3 and 2.2.4.
	* lib/oci8/version.rb: update to 2.2.3.
	* docs/ldap-auth-and-function-interposition.md,
	  docs/hanging-after-inactivity.md: updated

2017-06-08  Kubo Takehiro <kubo@jiubao.org>
	* lib/oci8.rb: Remove added dll directory after 'require oci8lib.so'.
	    (RubyInstaller2 for Windows only)

2017-06-06  Kubo Takehiro <kubo@jiubao.org>
	* docs/hanging-after-inactivity.md: revise
	* dist-files: add docs/hanging-after-inactivity.md.

2017-06-06  Kubo Takehiro <kubo@jiubao.org>
	* mkpkg-win32.rb: Use RubyInstaller2 to compile binary gems for
	    ruby 2.4 on Windows.

2017-05-31  Kubo Takehiro <kubo@jiubao.org>
	* docs/hanging-after-inactivity.md:
	    Add a document about tcp_keepalive and tcp_keepalive_time properties.
	* README.md, docs/timeout-parameters.md, lib/oci8/properties.rb:
	    Add links to the TCP keepalive document.

2017-05-21  Kubo Takehiro <kubo@jiubao.org>
	* docs/install-instant-client.md: Add a link to the Visual
	    C++ 2013 redistributable package required to use Oracle 12.2.

2017-05-08  Kubo Takehiro <kubo@jiubao.org>
	* lib/oci8.rb: Fix for RubyInstaller2 for Windows.
	    https://github.com/oneclick/rubyinstaller2/issues/11

2017-05-07  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: Use Win32::Registry instead of Win32API
	    to compile ruby-oci8 on the latest cygwin.
	    (github issue #167)

2017-02-14  Kubo Takehiro <kubo@jiubao.org>
	* test/test_connstr.rb: fix test to pass the previous commit.

2017-02-14  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/hook_funcs.c, ext/oci8/oci8.c, ext/oci8/oci8.h,
	  lib/oci8/oci8.rb, lib/oci8/properties.rb:
	    Add tcp_keepalive options to OCI8.properties.

2017-01-14  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/env.c, ext/oci8/error.c, ext/oci8/oci8.h,